WIP, NotTested: finish to code NetMonitor to fetch ATR/RTT/ZK streams

--- a/atr-owd-server/index.html
+++ b/atr-owd-server/index.html
@@ -20,8 +20,7 @@
       }
     </style>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="smoothie.js"></script>
-    <script src="atr-rtt-monitor.js"></script>
+    <script src="/lib/NetMonitor.js"></script>
   </head>
   <body>
     <div class="dataContainer">
