--- a/atr-owd-server/index.html
+++ b/atr-owd-server/index.html
@@ -21,6 +21,24 @@
     </style>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/lib/NetMonitor.js"></script>
+    <script>
+      document.addEventListener('DOMContentLoaded', function (event) {
+        var lineCfg = {lineWidth:2,strokeStyle:'#19ff00'}
+
+        var rttChartCfg = {millisPerPixel:42,maxValueScale:0.8,interpolation:'step',scaleSmoothing:0.205,grid:{sharpLines:true,millisPerLine:2000,verticalSections:6},labels:{fontSize:18},timestampFormatter:SmoothieChart.timeFormatter,minValue:0,maxValue:100,horizontalLines:[{color:'#ffffff',lineWidth:1,value:0},{color:'#880000',lineWidth:2,value:3333},{color:'#880000',lineWidth:2,value:-3333}]}
+
+        var atrChartCfg = {millisPerPixel:42,maxValueScale:0.8,interpolation:'step',scaleSmoothing:0.205,grid:{sharpLines:true,millisPerLine:2000,verticalSections:6},labels:{fontSize:18},timestampFormatter:SmoothieChart.timeFormatter,minValue:0,maxValue:300,horizontalLines:[{color:'#ffffff',lineWidth:1,value:0},{color:'#880000',lineWidth:2,value:3333},{color:'#880000',lineWidth:2,value:-3333}]}
+
+        var rttCharts = ['rtt-clu-neu']
+        var atrCharts = ['atr-clu-neu']
+
+        var socket = io()
+        var monitor = new AtrRttMonitor(rttCharts, atrCharts, socket, rttChartCfg,
+           atrChartCfg, lineCfg)
+        // Fetching ATR/RTT/ZK streams in a periodic way
+        monitor.getStreams()
+      })
+    </script>
   </head>
   <body>
     <div class="dataContainer">
